# feax

./: .gitattributes  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
docs/: feaextensions.md  feax_future.md
src/feaxlib/: __init__.py  feax_ast.py  feax_parser.py
tests/: test_main.py
tests/data/: calc.fea  calc.feax  issue65.fea  issue65.feax  kashida.feax  kashidaB.fea  kashidaR.fea  ligatures.fea  ligatures.feax  multsub.fea  multsub.feax  sample.fea  sample.feax
