[build-system]
requires = ["setuptools>=62.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "feaxlib"
version = "0.9.1"
authors = [{name = "SIL International", email = "fonts@sil.org"}]
readme = "README.md"
license = {file = "LICENSE"}
description = "FEAX processing library"
classifiers = [
   "Environment :: Console",
   "Programming Language :: Python :: 3.8",
   "Intended Audience :: Developers",
   "License :: OSI Approved :: MIT License",
   "Topic :: Text Processing :: Fonts"
   ]
requires-python = ">=3.8"

dependencies = [
"ufoLib2",
"fontTools",
]

[project.optional-dependencies]
git = [
"fonttools @ git+https://github.com/fonttools/fonttools",
"ufoLib2 @ git+https://github.com/fonttools/ufoLib2",
]

[project.urls]
Home-Page = "https://github.com/silnrsi/feax"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]

[tool.bdist_wheel]
universal = true

[project.scripts]
makefea = "feaxlib:main"
