[build-system]
requires = ["setuptools>=62.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "feaxlib"
version = "0.3"
authors = [{name = "SIL International", email = "fonts@sil.org"}]
readme = "README.md"
license = {file = "LICENSE"}
description = "Extended fea conversion"
classifiers = [
   "Environment :: Console",
   "Programming Language :: Python :: 3.8",
   "Intended Audience :: Developers",
   "License :: OSI Approved :: MIT License",
   "Topic :: Text Processing :: Fonts"
   ]
requires-python = ">=3.8"

dependencies = [
]

[project.optional-dependencies]
git = [
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]

[tool.bdist_wheel]
universal = true

[project.scripts]
makefea = "feaxlib:main"
